<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.challengems.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:adjustViewBounds="true"
            android:alpha="0.4"
            android:src="@drawable/moviedog" />

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:padding="@dimen/dim_margin1"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/dim_title"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:id="@+id/main_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_text_view"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="@dimen/zero"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/player"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/player1" />

                    <TextView
                        android:id="@+id/score1_text_view"
                        style="@style/score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/score" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/zero"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/player"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/player2" />

                    <TextView
                        android:id="@+id/score2_text_view"
                        style="@style/score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/score" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                style="@style/category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movie" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="@dimen/zero"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/movie_p1_button"
                        style="@style/Button_pt"
                        android:onClick="seeMovieP1"
                        android:text="@string/moviePT" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/zero"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/movie_p2_button"
                        style="@style/Button_pt"
                        android:onClick="seeMovieP2"
                        android:text="@string/moviePT" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                style="@style/category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/short_seasson" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="@dimen/zero"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/little_seasson_p1_button"
                        style="@style/Button_pt"
                        android:onClick="seeShortSeassonP1"
                        android:text="@string/short_seassonPT" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/zero"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/little_seasson_p2_button"
                        style="@style/Button_pt"
                        android:onClick="seeShortSeassonP2"
                        android:text="@string/short_seassonPT" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                style="@style/category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/long_seasson" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="@dimen/zero"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/big_seasson_p1_button"
                        style="@style/Button_pt"
                        android:onClick="seeLongSeassonP1"
                        android:text="@string/long_seassonPT" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/zero"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/big_seasson_p2_button"
                        style="@style/Button_pt"
                        android:onClick="seeLongSeassonP2"
                        android:text="@string/long_seassonPT" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_game"
            android:layout_marginTop="@dimen/dim_margin1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/reset_button"
                style="@style/Button_sr"
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="resetScore"
                android:text="@string/reset" />

            <Button
                android:id="@+id/save_button"
                style="@style/Button_sr"
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="saveScore"
                android:text="@string/save" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
